--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -361,6 +360,7 @@
                   <div className="bg-white rounded-lg shadow-md">
                     <div className="p-4 border-b border-gray-200">
                       <h2 className="text-lg font-bold text-gray-800">📝 借用申請</h2>
+                      <p className="text-sm text-gray-600 mt-1">請填寫完整資訊</p>
                     </div>
                     
                     <div className="p-4 space-y-4">
